Fixed main text color when in dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,9 @@
     color:#213547
 }
 
+#dark .text {
+    color: #eae3e3;
+}
 #light .overlay {
     background-color: #eae3e3;
 }
